config-root/namespaces/jx/mychart-charts/nexus-svc.yaml
# Source: mychart/templates/nexus.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: jx
  annotations:
    meta.helm.sh/release-name: 'charts'
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  selector:
    app: nexus
  type: ClusterIP
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 8081
  - name: docker
    protocol: TCP
    port: 8082
    targetPort: 8082
  - name: maven
    protocol: TCP
    port: 8083
    targetPort: 8083
