config-root/namespaces/jx/mychart-charts/docker-ingress-ingress.yaml
# Source: mychart/templates/docker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1000m"
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'charts'
  generation: 1
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
  name: docker-ingress
  namespace: jx
spec:
  rules:
  - host: nexus-docker.saas-ops.finline.app
    http:
      paths:
      - backend:
          service:
            name: nexus
            port:
              number: 8082
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - nexus-docker.saas-ops.finline.app
    secretName: jx-privkey
status:
  loadBalancer: {}
